# autograsper

./: .gitignore  LICENSE  README.md  autograsper.py  pyproject.toml  recording.py  requirements.txt  thread_manager.py
.devcontainer/: Dockerfile  devcontainer.json
autograsper/: README.md  backgammon-config.yaml  coordinator.py  file_manager.py  grasper.py  main.py  my_config.yaml  recording.py  utils.py
autograsper/custom_graspers/: calibrate_grasper.py  manual_grasper.py  my_custom_grasper.py
client/: cloudgripper_client.py
examples/: random_grasping_task.py
tools/: extract_keyframes.py  load_experiment_data.py  mp4_2_hdf5.py  sbatch_generator.sh  sbatch_submitter.sh  traj2pkl.py
tools/hdf5/: dataset_2_hdf5.py  load_experiment_data_hdf5.py
tools/prev_version/: load_experiment_data.py  mp4_2_hdf5.py  traj2pkl.py
